--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 .DS_Store
 node_modules
-/dist
-
 
 # local env files
 .env.local
@@ -21,3 +19,7 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Public & dist assets
+dist
+public/assets
