--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "home2",
-  "version": "0.1.0",
+  "name": "www.nicolas-t.ovh",
+  "version": "2.0.0-rc0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/jquery": "^3.5.4",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "gulp": "^4.0.2",
+    "moment": "^2.29.1",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.22.1",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -23,7 +28,8 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jquery": true
     },
     "extends": [
       "plugin:vue/essential",
