--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          rm: true
+          rm: false
+          overwrite: true
+          strip_components: 1
           source: "dist/*"
           target: "${{ secrets.REMOTE_DIR }}"
