--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,8 @@ name: Deploy www.nicolas-t.ovh via SSH
 
 on:
   release:
-    branches: [master]
+    types: [ published ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -12,7 +13,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [ 14.x ]
     
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, 
