--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -1,6 +1,7 @@
 remote:
   hosts:
     192.168.1.35:
-      domain: home
-      root_path: "/home/web/{{ domain }}"
+      domain: nicolas-t.ovh
+      folder: www
+      root_path: "/home/web/sites/{{ domain }}/{{ folder }}"
       ansible_python_interpreter: /usr/bin/python
