--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/jquery": "^3.5.4",
-    "core-js": "^3.6.5",
+    "@types/jquery": "^3.5.5",
+    "core-js": "^3.9.1",
     "gulp": "^4.0.2",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.22.1",
-    "vue-router": "^3.4.9"
+    "vue-i18n": "^8.24.1",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
